@@ -25,7 +25,7 @@ public class NeteaseWeibooApi extends DefaultApi10a {
      *
      * via http://open.t.163.com/wiki/index.php?title=%E8%AF%B7%E6%B1%82%E7%94%A8%E6%88%B7%E6%8E%88%E6%9D%83Token(oauth/authorize)
      */
-    public String getAuthorizationUrl(Token requestToken) {
+    public String getAuthorizationUrl(final Token requestToken) {
         return String.format(AUTHORIZE_URL, requestToken.getToken());
     }
 
@@ -33,8 +33,11 @@ public class NeteaseWeibooApi extends DefaultApi10a {
      * this method is for web client with callback url if you're creating a desktop client please call getAuthorizationUrl
      *
      * via http://open.t.163.com/wiki/index.php?title=%E8%AF%B7%E6%B1%82%E7%94%A8%E6%88%B7%E6%8E%88%E6%9D%83Token(oauth/authenticate)
+     *
+     * @param requestToken Token
+     * @return String
      */
-    public String getAuthenticateUrl(Token requestToken) {
+    public String getAuthenticateUrl(final Token requestToken) {
         return String.format(AUTHENTICATE_URL, requestToken.getToken());
     }
 }
