@@ -17,29 +17,34 @@ public class HeaderExtractorTest {
     private OAuthRequest request;
 
     @Before
-    public void setup() {
+    public void setUp() {
         request = ObjectMother.createSampleOAuthRequest();
         extractor = new HeaderExtractorImpl();
     }
 
     @Test
     public void shouldExtractStandardHeader() {
-        String expected = "OAuth oauth_callback=\"http%3A%2F%2Fexample%2Fcallback\", " + "oauth_signature=\"OAuth-Signature\", "
-                + "oauth_consumer_key=\"AS%23%24%5E%2A%40%26\", " + "oauth_timestamp=\"123456\"";
-        String header = extractor.extract(request);
-        assertEquals(expected, header);
+        final String header = extractor.extract(request);
+        try {
+            assertEquals("OAuth oauth_callback=\"http%3A%2F%2Fexample%2Fcallback\", " + "oauth_signature=\"OAuth-Signature\", "
+                    + "oauth_consumer_key=\"AS%23%24%5E%2A%40%26\", " + "oauth_timestamp=\"123456\"", header);
+        } catch (AssertionError ae) {
+            //maybe this is OpenJDK 8? Different order of elements in HashMap while iterating'em.
+            assertEquals("OAuth " + "oauth_signature=\"OAuth-Signature\", " + "oauth_callback=\"http%3A%2F%2Fexample%2Fcallback\", "
+                    + "oauth_consumer_key=\"AS%23%24%5E%2A%40%26\", " + "oauth_timestamp=\"123456\"", header);
+        }
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void shouldExceptionIfRequestIsNull() {
-        OAuthRequest nullRequest = null;
+        final OAuthRequest nullRequest = null;
         extractor.extract(nullRequest);
     }
 
     @Test(expected = OAuthParametersMissingException.class)
     public void shouldExceptionIfRequestHasNoOAuthParams() {
-        OAuthRequest emptyRequest = new OAuthRequest(Verb.GET, "http://example.com", new OAuth20ServiceImpl(new FacebookApi(), new OAuthConfig("test",
-                "test")));
+        final OAuthRequest emptyRequest = new OAuthRequest(Verb.GET, "http://example.com", new OAuth20ServiceImpl(new FacebookApi(), new OAuthConfig(
+                "test", "test")));
         extractor.extract(emptyRequest);
     }
 }
